@@ -1,3 +1,5 @@
+* Make the match() method utilize the compiled cache better. [jddalton]
+
 * Ensure the match() method validates the selector. [jddalton]
 
 * Normalize selectors to reduce selector parsing complexity and improve compiled/dom caching memory footprints. [jddalton]
